--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-hacker
+title: Magnetomage's user page
+description: a test page to play with
+show_downloads: "false"
+google_analytics: UA-113344639-2
